--- a/pyscada/laborem/templates/top_menu_right.html
+++ b/pyscada/laborem/templates/top_menu_right.html
@@ -27,6 +27,7 @@
                       <th style="text-align: center">Utilisateur</th>
                       <th style="text-align: center">Score</th>
                   </tr>
+                    <tr class="top10-item"><td>Chargement en cours ...</td><td style="text-align: center">0</td></tr>
                 </table>
             </div>
         </div>
