--- a/pyscada/laborem/templates/choose_login.html
+++ b/pyscada/laborem/templates/choose_login.html
@@ -10,8 +10,8 @@
 
 {% csrf_token %}
 <p style="text-align: center;">
-    <button class="btn btn-lg btn-primary" type="button" onclick="window.location.href='/accounts/login/?next=/'">Sign in with Django</button>
-    <button class="btn btn-lg btn-primary" type="button" onclick="window.location.href='/accounts/CASlogin/?next=/'">Sign in with CAS</button>
+    <button class="btn btn-lg btn-primary" type="button" onclick="window.location.href='/accounts/login/?next=/'">Se connecter avec Django</button>
+    <button class="btn btn-lg btn-primary" type="button" onclick="window.location.href='/accounts/CASlogin/?next=/'">Se connecter avec IUT GIM</button>
 </p>
 </div>
 </div>
