--- a/pyscada/laborem/templates/DUT_selector.html
+++ b/pyscada/laborem/templates/DUT_selector.html
@@ -1,4 +1,4 @@
-{% load i18n staticfiles %}
+{% load i18n static %}
 <br><br><br>Liste des circuits :<br><br>
 {% if not dut_selector.MotherboardIOConfig.plug1 and not dut_selector.MotherboardIOConfig.plug2 and not dut_selector.MotherboardIOConfig.plug3 and not dut_selector.MotherboardIOConfig.plug4 and not dut_selector.MotherboardIOConfig.plug5 and not dut_selector.MotherboardIOConfig.plug6 and not dut_selector.MotherboardIOConfig.plug7 and not dut_selector.MotherboardIOConfig.plug8 and not dut_selector.MotherboardIOConfig.plug9 and not dut_selector.MotherboardIOConfig.plug10 and not dut_selector.MotherboardIOConfig.plug11 and not dut_selector.MotherboardIOConfig.plug12 and not dut_selector.MotherboardIOConfig.plug13 and not dut_selector.MotherboardIOConfig.plug14 and not dut_selector.MotherboardIOConfig.plug15 and not dut_selector.MotherboardIOConfig.plug16 %}
     No plug config
