--- a/pyscada/laborem/templates/content.html
+++ b/pyscada/laborem/templates/content.html
@@ -1,4 +1,4 @@
-{% load i18n staticfiles %}
+{% load i18n static %}
     {{pages_html|safe}}
     <div id="page-log" class="sub-page" style="display: none;">
         <table id="log-table" class="table table-condensed table-hover tablesorter tablesorter-default" width="100%">
