--- a/pyscada/laborem/templates/css.html
+++ b/pyscada/laborem/templates/css.html
@@ -1,3 +1,3 @@
-{% load i18n staticfiles %}
+{% load i18n static %}
 <!-- Laborem styles -->
 <link href="{% static "pyscada/laborem/css/pyscada-laborem-theme.css" %}" rel="stylesheet"/>
