--- a/pyscada/laborem/templates/footer.html
+++ b/pyscada/laborem/templates/footer.html
@@ -1,2 +1,2 @@
-{% load i18n staticfiles %}
+{% load i18n static %}
 <span class="pull-left">{% if laborem_version_string %} - PyScada-Laborem Version: {{laborem_version_string}}{% endif %}</span>
