--- a/pyscada/laborem/templates/modals.html
+++ b/pyscada/laborem/templates/modals.html
@@ -1,4 +1,4 @@
-{% load i18n staticfiles %}
+{% load i18n static %}
 
     <!-- Modal -->
     <div class="modal fade" id="MessageModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" data-backdrop="static">
