--- a/pyscada/laborem/templates/side_menus.html
+++ b/pyscada/laborem/templates/side_menus.html
@@ -1,4 +1,4 @@
-{% load i18n staticfiles %}
+{% load i18n static %}
     <!--
     <div class="camera side-menu left hidden">
         <ul class="status-panel">
