--- a/pyscada/laborem/templates/top_menu_left.html
+++ b/pyscada/laborem/templates/top_menu_left.html
@@ -1,4 +1,4 @@
-{% load i18n staticfiles %}
+{% load i18n static %}
     {% if view_title == "laborem" %}
         {% for page in page_list %}
             <li class="hidden"><a href="#{{page.link_title}}">{{page.title}}</a></li>
