--- a/pyscada/laborem/templates/top_menu_right.html
+++ b/pyscada/laborem/templates/top_menu_right.html
@@ -1,4 +1,4 @@
-{% load i18n staticfiles %}
+{% load i18n static %}
     <li class="dropdown dropdown-WaitingList">
         <a class="dropdown-toggle dropdown-WaitingList-toggle" href="#" data-toggle="dropdown"><span class="glyphicon glyphicon-time"></span> File d'attente <strong class="caret"></strong></a>
         <div class="dropdown-menu" style="padding: 15px;background-color: white;width:300px;">
