--- a/pyscada/laborem/templates/logo.html
+++ b/pyscada/laborem/templates/logo.html
@@ -1,2 +1,2 @@
-{% load i18n staticfiles %}
+{% load i18n static %}
 <p style="float:left;margin-bottom:0px;margin-right:15px;"><img src="{% static "pyscada/img/logo1.jpg" %}" onerror="this.width=0;" height=50px>&nbsp;&nbsp;<img src="{% static "pyscada/img/logo2.jpg" %}" onerror="this.width=0;" height=50px></p>
