--- a/pyscada/laborem/templates/view_laborem.html
+++ b/pyscada/laborem/templates/view_laborem.html
@@ -1,5 +1,5 @@
 {% extends "view.html" %}
-{% load i18n staticfiles %}
+{% load i18n static %}
 
 {% block head_css %}
     {% include "css.html" %}
